--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   introduction_screen: ^1.0.9
   flutter_svg: ^0.19.1
   eva_icons_flutter: ^2.0.0
+  qr_code_scanner: ^0.6.1
 
 dev_dependencies:
   flutter_test:
