--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   flutter_svg: ^0.19.1
   eva_icons_flutter: ^2.0.0
   qr_code_scanner: ^0.6.1
+  simple_animations: ^4.0.1
+  google_fonts: ^1.1.2
+  cached_network_image: ^2.5.1
 
 dev_dependencies:
   flutter_test:
