--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  pull_to_refresh: ^2.0.0
   cupertino_icons: ^1.0.2
   flutter_bloc: ^4.0.0
   bloc: ^4.0.0
@@ -47,6 +48,7 @@ dependencies:
   simple_animations: ^4.0.1
   google_fonts: ^1.1.2
   cached_network_image: ^2.5.1
+  jiffy: ^4.1.0
 
 dev_dependencies:
   flutter_test:
